--- a/about/about.html
+++ b/about/about.html
@@ -9,7 +9,7 @@
 <body>
     <nav id="navbar">
         <div class="navbar-left">
-            <h3 style="color:white">Robinhood Plumbing Experts</h3>
+            <h3 style="color:white">Robin-hood Plumbing Experts</h3>
         </div>
         <div class="navbar-right">
             <a href="../index.html?a8d07f43-feca-4662-8455-4351b343ab0f-XAzyfebksfw/fsfwihfdh?query=search-for-blogAZunbbb">Blog</a>
@@ -21,24 +21,24 @@
         <img src="../images/about header.jpg" alt="">
         <div class="header-content">
             <h1>About Us</h1>
-            <p>Whether you need a simple faucet installation or complete sewer line replacement, we offer a wide range of residential and commercial plumbing services to meet your needs. We continually strive to exceed expectations by ensuring that each client receives the very best service. </p>
+            <p>We provide you with all kinds of electrical works such as Domestic / Commercial / Low tension (LT) / High tension (HT) / Special Electrical fitting / Panel Board </p>
         </div>
     </header>
     <div class="service-section">
         <div class="service-card">
             <img src="../images/aboutService1.jpg" alt="">
             <h3>Reliable Professionals</h3>
-            <p>Whether you need a simple faucet installation or complete sewer line replacement, we offer a wide range of residential and commercial plumbing services to meet your needs. We continually strive to exceed expectations by ensuring that each client receives the very best service. </p>
+            <p>Home automation describes a system of networked, controllable devices that work together to make your home more comfortable, customized </p>
         </div>
         <div class="service-card">
             <img src="../images/aboutService2.jpg" alt="">
             <h3>Individualized Plumbing Options</h3>
-            <p>We strive to exceed expectations by ensuring that all plumbing work is completed to the highest standards.  We will provide you with a free consultation to explain all of your available options so that you can choose the scope or work that’s right for your home or business.   </p>
+            <p>nterior Designers plan, design and coordinate the creation or renovation of the spaces we live and workin..  </p>
         </div>
         <div class="service-card">
             <img src="../images/aboutService2.jpg" alt="">
             <h3>Customer Satisfaction Guaranteed</h3>
-            <p>We serve both residential and commercial clients and offer a variety of money-saving solutions. We combine our use of the highest quality parts and equipment, and our dedication to delivering exceptional work to provide you with satisfactory service.  </p>
+            <p>We are engaged in providing Centralized Gas Pipe System that are used in Apartment. These LPG Gas Pipe Line is Centralized Gas Pipe System are one of the.  </p>
         </div>
     </div>
     <div class="gallery-section">
@@ -46,7 +46,7 @@
         <img src="../images/banner.jpg" alt="">
     </div>
     <footer>
-        <h4>Copyright © 2023 Robinhood Plumbing Experts - All Rights Reserved. </h4>
+        <h4>Copyright © 2023 Robin-hood Plumbing Experts - All Rights Reserved. </h4>
     </footer>
 </body>
 </html>
