--- a/faq/faq.html
+++ b/faq/faq.html
@@ -9,7 +9,7 @@
 <body>
     <nav id="navbar">
         <div class="navbar-left">
-            <h3 style="color:white">Robinhood Plumbing Experts</h3>
+            <h3 style="color:white">Robin-hood Plumbing Experts</h3>
         </div>
         <div class="navbar-right">
             <a href="../index.html?a8d07f43-feca-4662-8455-4351b343ab0f-XAzyfebksfw/fsfwihfdh?query=search-for-blogAZunbbb">Blog</a>
@@ -19,18 +19,18 @@
     </nav>
     <div class="faq-header">
         <h2>FAQs (Frequently Asked Questions)</h2>
-        <h3>How much does it cost for a consultation?</h3>
-        <p>We can offer you a free quote based on a remote interview, or we charge our basic.</p>
-        <h3>Do You Offer a warranty on your work?</h3>
-        <p>We stand by our products and services 100%, and we provide a 1-year warranty free of charge. </p>
-        <h3>Do I need to get permits or is that covered under the repair/work costs?</h3>
-        <p>Any permits or inspections needed to complete the job are covered in our fees and handled accordingly.</p>
+        <h3>do u think we will charge you more?</h3>
+        <p>if u want we can provide you extra complimetary services.</p>
+        <h3>if u wish do u even want a need from us?</h3>
+        <p>we take care of your home as our own home so we furnish it pretty well </p>
+        <h3>you guys dont even need to know our costs is barely expensive its cheape?</h3>
+        <p>you dont requre any permits or anything else to claim our offers we provide best.</p>
     </div>
     <div class="faq-banner">
         <img src="../images/banner.jpg" alt="">
     </div>
     <footer>
-        <h4>Copyright © 2023 Robinhood Plumbing Experts - All Rights Reserved. </h4>
+        <h4>Copyright © 2023 Robin-hood Plumbing Experts - All Rights Reserved. </h4>
     </footer>
 </body>
 </html>
