--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Robin Hood</title>
+    <title>Robin-Hood</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav id="navbar">
         <div class="navbar-left">
-            <h3 style="color:white">Robinhood Plumbing Experts</h3>
+            <h3 style="color:white">Robin-hood Plumbing Experts</h3>
         </div>
         <div class="navbar-right">
             <a href="./blog/index.html?a8d07f43-feca-4662-8455-4351b343ab0f-XAzyfebksfw/fsfwihfdh?query=search-for-blogAZunbbb">Blog</a>
@@ -18,38 +18,39 @@
         </div>
     </nav>
     <header class="header">
-        <h1>Blogs</h1>
+        <h1>Home Care Services</h1>
     </header>
     <div class="blog-card">
         <img src="./images/service1.jpg" alt="">
         <div class="blog-card-content">
             <h2>Plumbing Service</h2>
-            <p>We strive to exceed expectations by ensuring that all plumbing work is completed to the highest standards.  We will provide you with a free consultation to explain all of your available options so that you can choose the scope or work that’s right for your home or business.</p>
+            <p>Partitions are non-load bearing walls that separate spaces in buildings and constructed from brick or block work..</p>
         </div>
     </div>
     <div class="blog-card">
         <img src="./images/service2.jpg" alt="">
         <div class="blog-card-content">
             <h2>Carpenter Service</h2>
-            <p>Our team of skilled carpenters is dedicated to transforming your vision into reality, enhancing the beauty and functionality of your home. From intricate woodwork to structural repairs, we have the expertise to handle all your carpentry needs with precision and care.</p>
+            <p>Block paving also known as brick paving is a commonly used decorative method of creating a pavement or hardstanding.</p>
         </div>
     </div>
     <div class="blog-card">
         <img src="./images/service3.jpg" alt="">
         <div class="blog-card-content">
             <h2>Painting Service</h2>
-            <p>we understand the profound impact that a fresh coat of paint can have on a space. Whether you're looking to revitalize your home, refresh your office environment, or enhance the appeal of your commercial property, our professional painting services are tailored to meet your unique needs.</p>
+            <p>
+Pest control is the regulation or management of a species defined as a pest, a member of the of structural timber caves in. we always provide best for our clients and customers and fullfill their needs .</p>
         </div>
     </div>
     <div class="our-team">
         <div class="our-team-header">
             <h2>Our Team</h2>
-            <p>We have trained an experienced team of plumbers which will help you to solve your all plumbing needs.</p>
+            <p>we as our team is highly good at our work in all the ways possible to help you guys.</p>
         </div>
         <div class="our-team-bottom">
-            <li>Check all plumbing fittings in toilets for proper operation.</li>
+            <li>if u want to see our magical work just see our site.</li>
             <li>Ensuring adequate water in the overhead tanks for use</li>
-            <li>Check for the proper functioning of valves and rectify for water leakages through valves and fittings.</li>
+            <li>check our proper fittings in the website we desire you to deliver.</li>
             <li>To clean on a regular basis, all underground and overhead tanks and to ensure there are no deposits/sediments or algae growth.</li>
         </div>
     </div>
